[package]
name = "conc-map-bench"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
bustle = "^0.5"
tracing-subscriber = "^0.3"
num_cpus = "^1.16"
fxhash = "^0.2"
dashmap = "^5.4"
parking_lot = "^0.12"
seize = "^0.2"
structopt = "^0.3"
json = "^0.12"
csv = "^1.2"
serde = { version = "^1.0", features = ["derive"] }
plotters = "^0.3"
scc = "1.9.0"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
