[package]
name = "conc-map-bench"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
bustle = "0.5.1"
tracing-subscriber = "0.3.17"
num_cpus = "1.16.0"
ahash = "0.8.3"
dashmap = { version = "5.5.3", features = ["inline"] }
crossbeam-epoch = { version = "0.9.15", package = "crossbeam-epoch" }
parking_lot = "0.12.1"
seize = "0.2.5"
structopt = "0.3.26"
json = "0.12.4"
csv = "1.2.2"
serde = { version = "1.0.185", features = ["derive"] }
plotters = "0.3.5"
scc = "2.1.0"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
