[package]
name = "conc-map-bench"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
bustle = "0.5.1"
tracing-subscriber = "0.3.18"
num_cpus = "1.16.0"
ahash = "0.8.11"
dashmap = { version = "6.1.0", features = ["inline"] }
structopt = "0.3.26"
json = "0.12.4"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
plotters = "0.3.7"
scc = "2.2.1"
papaya = "0.1.3"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
